Reset project. Trying to figure out map and search container layout issues.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,11 @@
 /* Global
 ================================= */
-$black-text: black;
 
 /* Layout
 ================================= */
 
 body {
   font-family: sans-serif;
-  color: $black-text !important;
 }
 
 .App{
@@ -15,16 +13,17 @@ body {
     padding: 0 !important;
     .SearchContainer {
         float: left;
-        z-index: 2;
-        margin: 1% 0 0 -1%;
+        margin: 1% 0 0 0%;
+        z-index: 2 !important;
     }
     .GMapContainer{
-        height: 100%;
-        position: absolute;
         float: left;
-        z-index: -1;
+        height: 100%;
+        width: 100%;
+        position: absolute;
         margin: 0 !important;
         padding: 0 !important;
+        z-index: -1 !important;
     }
     // Hides fullscreen button on map
     .gm-fullscreen-control {
